--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -1,4 +1,14 @@
 {
     "@@locale": "ja",
-    "appTitle": "きんのページ"
+    "appTitle": "きんのぺーじ",
+    "loginHint": "ろぐいん",
+    "logoutHint": "ろぐあうと",
+    "loggedInHint": "{email}でログインしています。",
+    "@loggedInHint": {
+        "placeholders": {
+            "email": {
+                "type": "String"
+            }
+        }
+    }
 }
