--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -1,8 +1,8 @@
 {
     "@@locale": "ja",
-    "appTitle": "きんのぺーじ",
-    "loginHint": "ろぐいん",
-    "logoutHint": "ろぐあうと",
+    "appTitle": "Kinn's Page",
+    "loginHint": "ログイン",
+    "logoutHint": "ログアウト",
     "loggedInHint": "{email}でログインしています。",
     "@loggedInHint": {
         "placeholders": {
